Fixed broken css link

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ a:hover {
 	border-bottom: 2px solid #002348;
 }
 
-
 hr {
 	margin: 3.2rem 1.6rem;
 	color: #555555;
@@ -59,6 +58,7 @@ hr {
 }
 
 .container {
+	display: grid;
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
@@ -91,17 +91,6 @@ hr {
 	justify-content: center;
 	align-items: center;
 	text-transform: uppercase;
-	
-}
-
-/*Two column grid layout */
-.main-article_content   {
-	display: grid;
-	grid-template-columns: 1fr 1fr; 
-	gap: 20px;
-	padding: 20px;
-
-
 }
 
 .main-article {
@@ -193,10 +182,4 @@ hr {
 		border-radius: 0.6rem;
 		margin: 0;
 	}
-
-	.img {
-		max-width: 100%;
-		height: auto;
-	  }
-
 }
